@@ -111,6 +111,9 @@ exclude_trees = [%(exclude_trees)s]
 # The name of the Pygments (syntax highlighting) style to use.
 pygments_style = 'sphinx'
 
+# A list of ignored prefixes for module index sorting.
+#modindex_common_prefix = []
+
 
 # Options for HTML output
 # -----------------------
