@@ -18,7 +18,7 @@
    <hr/>
 
    <table width="100%" class="indextable" cellspacing="0" cellpadding="2">
-   {%- for modname, collapse, cgroup, indent, fname, synops, pform, dep in modindexentries %}
+   {%- for modname, collapse, cgroup, indent, fname, synops, pform, dep, stripped in modindexentries %}
    {%- if not modname -%}
    <tr class="pcap"><td></td><td>&nbsp;</td><td></td></tr>
    <tr class="cap"><td></td><td><a name="cap-{{ fname }}"><strong>{{ fname }}</strong></a></td><td></td></tr>
@@ -30,7 +30,7 @@
          {%- endif %}</td>
      <td>{% if indent %}&nbsp;&nbsp;&nbsp;{% endif %}
      {% if fname %}<a href="{{ fname }}">{% endif -%}
-     <tt class="xref">{{ modname|e }}</tt>
+     <tt class="xref">{{ stripped|e }}{{ modname|e }}</tt>
      {%- if fname %}</a>{% endif %}
    {%- if pform and pform[0] %} <em>({{ pform|join(', ') }})</em>{% endif -%}
    </td><td>{% if dep %}<strong>{{ _('Deprecated')}}:</strong>{% endif %}
